--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,9 @@ notifications: "visible"
 markdown: kramdown
 permalink: pretty
 
+gems:
+  - jekyll-redirect-from
+
 prose:
   rooturl: '_posts'
   siteurl: 'https://www.bitcoinhk.org/'
