--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 _site/
 .sass-cache/
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+*~
