--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
-    "gh-pages": "^2.1.1"
+    "gh-pages": "^2.1.1",
+    "grunt": ">=1.5.3"
   },
   "devDependencies": {},
   
